--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "mongoose": "^8.0.0",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "swr": "^2.2.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
